@@ -2,6 +2,6 @@ DIST jboss-4.0.2-gentoo-r3.data 7498 RMD160 446b951987e42b41c20415d1c8a922101c5a
 DIST jboss-module-remoting-4.0.2-gentoo.tar.bz2 614356 RMD160 fc1de7f66610ddde4b7337f7fd72af484b5e1321 SHA1 fea3928ce23cb9e0f3a23f39524d362f8167ccc7 SHA256 4d80414c4b8c3d99f182fba92591152cf3fea1a372764547c59bad1956510a0d
 DIST jboss-thirdparty-4.0.2-gentoo.tar.bz2 13586285 RMD160 d6792984c90ba414ccf4120034beaee2d0601e91 SHA1 4df51eb70495d45058602a54b451958298429bef SHA256 b1170a37fae39ded8275d777db146c93b320c179311786bee38fe978fd80e54f
 DIST jboss-tools-4.0.2-gentoo-r1.tar.bz2 4524270 RMD160 099c8b5ba83dfe484e455500223fe7e53eb26d5b SHA1 ee7cffa8f7e121b1c6cf9347c56b248d168ef776 SHA256 31d061470917632fc5e04408a02512c83842e18b7752e6c4b5fb63ed8c36d45a
-EBUILD jboss-module-remoting-4.0.2.ebuild 1098 RMD160 8380b1f12f9fac346ee769f2b707528e3d34f745 SHA1 845c5d2df03209fc3250de1488d31edce8304b81 SHA256 efa1d1e75eab036363fd608fa3d73b6ffb516b93cb6828037aca4561d4c5abc1
-MISC ChangeLog 231 RMD160 47f5a5534ea59b831edc3b3230de6fdb11d04bfc SHA1 36c0a78f56a6a41ff3583266f255b934d2bb237d SHA256 9084ef652c4081d0539b81b38af4da9d2dc8042483ae7318c2149fa0099027fc
-MISC metadata.xml 260 RMD160 694eb7585bbc176a4f0f2da255e5b8a8651cb6eb SHA1 922ddc2cb28cc8bb6d479813e323396e58016258 SHA256 e0dcae2b4b8be0c2640f49de4ce4c5e58609345b9d13d02b19853d7c1e5237f5
+EBUILD jboss-module-remoting-4.0.2.ebuild 1087 RMD160 213f33dd682afd82693fca975ce1b3e582da341b SHA1 0a1acac02580995be46577ba5940694f9b75956f SHA256 089c07da59bd844d5f71bc495502110783f5c0d27207e235aa7692130217c668
+MISC ChangeLog 340 RMD160 6da368b8e8c1b98670e124280483b02663f1687e SHA1 cf9a6757f085aedebd79482a146c526389985a28 SHA256 cc74a912aa888115a94ef532c7b720af8bddf693899302265302162818ea4e11
+MISC metadata.xml 299 RMD160 09fbb206a8ad7f2de0ba1e5322e296e76b37b638 SHA1 799ba52e1c8dc4379900ff0e083ac45c79904b58 SHA256 49316351be2284c2753b15e6452c7d86d37af068429330946df474533b8ba65d
